# USLAW

./: .dockerignore  .gitignore  CONFIGURATION-GUIDE.md  Dockerfile  Dockerfile.frontend  Dockerfile.frontend.dev  Dockerfile.gateway  Dockerfile.nginx  Makefile  README-MESSAGE-LIMITS.md  README-STRIPE-SETUP.md  SSL-SETUP.md  app.py  create_stripe_products.py  create_stripe_session.py  default_schema.sql  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  index.html  init-letsencrypt.sh  main.py  migration_add_message_count.sql  migration_fix_subscription_table.sql  pyproject.toml  sql_data_layer.py  stripe_schema.sql
.chainlit/: config.toml
agent/: chat_handler.py  utils.py
auth_providers/: __init__.py  google_oauth_provider.py
chatbot/: .gitignore  Dockerfile.backend  Dockerfile.backend.dev  app.py  main.py  pyproject.toml
chatbot/auth_providers/: __init__.py  google_oauth_provider.py
chatbot/storage/storage_clients/: __init__.py
config/: prod.conf
frontend/: .env  package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: Dashboard.css  Dashboard.js  Login.css  Login.js
frontend/src/config/: api.js
frontend/src/hooks/: useAuth.js
frontend/src/services/: authService.js
migrations/: add_default_roles.py  add_default_roles.sql  add_password_auth.sql  init_stripe_schema.py
nginx/: frontend.conf  gateway.conf  gateway.dev.conf
public/: login-overlay.js  site.webmanifest  style.css  theme.json
services/: stripe_service.py
storage/storage_clients/: __init__.py  digitalocean.py
